<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.moviestreamapp.ui.home.HomeFragment"
        android:label="@string/popular_movies">
        <action
            android:id="@+id/action_homeFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.example.moviestreamapp.ui.detail.MovieDetailFragment"
        android:label="@string/movie_details">
        <argument
            android:name="movieId"
            app:argType="integer" />
        <action
            android:id="@+id/action_movieDetailFragment_self"
            app:destination="@id/movieDetailFragment" />
        <action
            android:id="@+id/action_movieDetailFragment_to_videoPlayerFragment"
            app:destination="@id/videoPlayerFragment" />
    </fragment>

    <fragment
        android:id="@+id/videoPlayerFragment"
        android:name="com.example.moviestreamapp.ui.player.VideoPlayerFragment"
        android:label="@string/video_player">
        <argument
            android:name="movieId"
            app:argType="integer" />
        <argument
            android:name="movieTitle"
            app:argType="string" />
    </fragment>
</navigation>
